いいね機能完成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,3 +41,21 @@ nav.pagination {
   border: 1px solid #dcdcdc;
   background-color: #f8f8ff;
 }
+
+.like {
+  color: red;
+  text-decoration: none;
+}
+
+.like:hover {
+  text-decoration: none;
+}
+
+.unlike {
+  color: gray;
+  text-decoration: none;
+}
+
+.unlike:hover {
+  text-decoration: none;
+}
